--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
 
   --color-dark-mode:#000000;
   --color-gradient-1:linear-gradient(180deg,rgba(31, 120, 209, 1) 0%, rgba(100, 98, 150, 1) 100%);
+  --color-gradient-hover: linear-gradient(180deg,rgba(255, 255, 255, 0) 0%, rgba(45, 45, 54, 1) 100%);
 
 
 }
